--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>반응형</title>
+    <meta name="viewport" content="width=device-width">
     <style>
 
       /* 초기화 */
